feat: add prisma storage

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,6 @@
+# SQLite connection for Prisma
+DATABASE_URL="file:./dev.db"
+# Monobank jar identifier
+JAR_ID=
 # Personal token for Monobank API to auto-configure webhook
 MONOBANK_TOKEN=
