--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
     "dev": "next dev -p 3000",
     "build": "next build",
     "start": "next start -p 3000",
-    "test": "node --test --import tsx test/*.test.ts"
+    "test": "node --test --import tsx test/*.test.ts",
+    "migrate:json": "tsx scripts/migrate-json.ts"
   },
   "dependencies": {
     "clsx": "2.1.1",
     "next": "14.2.5",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "@prisma/client": "5.15.0"
   },
   "devDependencies": {
     "@types/node": "20.14.10",
@@ -22,6 +24,7 @@
     "postcss": "8.4.41",
     "tailwindcss": "3.4.10",
     "tsx": "^4.20.3",
-    "typescript": "5.5.4"
+    "typescript": "5.5.4",
+    "prisma": "5.15.0"
   }
 }
