feat: configure monobank webhook via env

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,5 @@ DATABASE_URL="file:./dev.db"
 JAR_ID=
 # Personal token for Monobank API to auto-configure webhook
 MONOBANK_TOKEN=
+# Public HTTPS URL for Monobank webhook
+MONOBANK_WEBHOOK_URL=
