feat(auth): add next-auth with twitch

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,6 @@ JAR_ID=
 MONOBANK_TOKEN=
 # Public HTTPS URL for Monobank webhook
 MONOBANK_WEBHOOK_URL=
+TWITCH_CLIENT_ID=
+TWITCH_CLIENT_SECRET=
+NEXTAUTH_SECRET=
