--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "migrate:json": "tsx scripts/migrate-json.ts"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "5.15.0",
+    "@radix-ui/react-slot": "^1.2.3",
+    "class-variance-authority": "^0.7.1",
     "clsx": "2.1.1",
     "next": "14.2.5",
+    "next-auth": "^4.24.11",
     "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "@prisma/client": "5.15.0"
+    "react-dom": "18.3.1"
   },
   "devDependencies": {
     "@types/node": "20.14.10",
@@ -22,9 +26,9 @@
     "@types/react-dom": "18.3.0",
     "autoprefixer": "10.4.20",
     "postcss": "8.4.41",
+    "prisma": "5.15.0",
     "tailwindcss": "3.4.10",
     "tsx": "^4.20.3",
-    "typescript": "5.5.4",
-    "prisma": "5.15.0"
+    "typescript": "5.5.4"
   }
 }
