feat: allow editing monobank settings

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,7 @@
 # SQLite connection for Prisma
 DATABASE_URL="file:./dev.db"
-# Monobank jar identifier
-JAR_ID=
-# Personal token for Monobank API to auto-configure webhook
-MONOBANK_TOKEN=
-# Public HTTPS URL for Monobank webhook
-MONOBANK_WEBHOOK_URL=
+# Secret for verifying Monobank webhook signatures
+MONOBANK_WEBHOOK_SECRET=
 TWITCH_CLIENT_ID=
 TWITCH_CLIENT_SECRET=
 NEXTAUTH_SECRET=
