--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "5.15.0",
+    "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "2.1.1",
     "next": "14.2.5",
     "next-auth": "^4.24.11",
+    "nuqs": "^2.4.3",
     "react": "18.3.1",
     "react-dom": "18.3.1"
   },
