--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "migrate:json": "tsx scripts/migrate-json.ts"
   },
   "dependencies": {
+    "@google-cloud/text-to-speech": "^6.2.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "5.15.0",
     "@radix-ui/react-dialog": "^1.1.14",
