--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "next build",
     "start": "next start -p 3000",
     "test": "node --test --import tsx test/*.test.ts",
-    "migrate:json": "tsx scripts/migrate-json.ts"
+    "migrate:json": "tsx scripts/migrate-json.ts",
+    "lint": "eslint .",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "@google-cloud/text-to-speech": "^6.2.0",
@@ -27,8 +29,15 @@
     "@types/node": "20.14.10",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
     "autoprefixer": "10.4.20",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^15.4.6",
+    "eslint-config-prettier": "^10.1.8",
     "postcss": "8.4.41",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.14",
     "prisma": "5.15.0",
     "tailwindcss": "3.4.10",
     "tsx": "^4.20.3",
