docs: add NEXTAUTH_URL to env example

--- a/.env.example
+++ b/.env.example
@@ -5,5 +5,7 @@ MONOBANK_WEBHOOK_SECRET=
 TWITCH_CLIENT_ID=
 TWITCH_CLIENT_SECRET=
 NEXTAUTH_SECRET=
+# Base URL for NextAuth callbacks
+NEXTAUTH_URL=
 ADMIN_LOGIN=
 ADMIN_PASSWORD=
