--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@prisma/client": "5.15.0",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-toast": "^1.2.14",
     "class-variance-authority": "^0.7.1",
     "clsx": "2.1.1",
     "next": "14.2.5",
