--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@ node_modules/
 dev.db
 prisma/dev.db
 prisma/dev.db-journal
+
+# Google Cloud credentials
+google-tts-credentials.json
+*-credentials.json
