--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kitsune-donations",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "private": true,
   "scripts": {
     "dev": "next dev -p 3000",
@@ -8,6 +8,7 @@
     "start": "next start -p 3000",
     "test": "node --test --import tsx test/*.test.ts",
     "migrate:json": "tsx scripts/migrate-json.ts",
+    "encrypt-tokens": "tsx scripts/encrypt-existing-tokens.ts",
     "lint": "eslint .",
     "format": "prettier --write ."
   },
