Configure Railway deployment
- Add Prisma scripts to package.json for database management
- Create nixpacks.toml for Railway build configuration
- Add railway.json for service configuration
- Include comprehensive deployment documentation

Ready for Railway deployment with SQLite database

--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "migrate:json": "tsx scripts/migrate-json.ts",
     "encrypt-tokens": "tsx scripts/encrypt-existing-tokens.ts",
     "lint": "eslint .",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "db:generate": "prisma generate",
+    "db:migrate": "prisma migrate deploy",
+    "db:push": "prisma db push",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@google-cloud/text-to-speech": "^6.2.0",
