--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "next-auth": "^4.24.11",
     "nuqs": "^2.4.3",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "react-player": "^3.3.1"
   },
   "devDependencies": {
     "@types/node": "20.14.10",
