--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "kitsune-donations",
   "version": "1.3.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev -p 3000",
     "build": "next build",
@@ -19,33 +20,35 @@
   "dependencies": {
     "@google-cloud/text-to-speech": "^6.2.0",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "5.15.0",
+    "@prisma/client": "^5.19.1",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
-    "clsx": "2.1.1",
-    "next": "14.2.5",
+    "clsx": "^2.1.1",
+    "next": "^15.1.0",
     "next-auth": "^4.24.11",
     "nuqs": "^2.4.3",
-    "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@types/node": "20.14.10",
-    "@types/react": "18.3.3",
-    "@types/react-dom": "18.3.0",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
-    "autoprefixer": "10.4.20",
-    "eslint": "^8.57.1",
-    "eslint-config-next": "^15.4.6",
-    "eslint-config-prettier": "^10.1.8",
-    "postcss": "8.4.41",
-    "prettier": "^3.6.2",
+    "@eslint/eslintrc": "^3.2.0",
+    "@eslint/js": "^9.17.0",
+    "@types/node": "^22.10.2",
+    "@types/react": "^18.3.17",
+    "@types/react-dom": "^18.3.5",
+    "@typescript-eslint/eslint-plugin": "^8.18.1",
+    "@typescript-eslint/parser": "^8.18.1",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^9.17.0",
+    "eslint-config-next": "^15.1.3",
+    "eslint-config-prettier": "^9.1.0",
+    "postcss": "^8.5.6",
+    "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
-    "prisma": "5.15.0",
-    "tailwindcss": "3.4.10",
+    "prisma": "^5.19.1",
+    "tailwindcss": "^3.4.17",
     "tsx": "^4.20.3",
-    "typescript": "5.5.4"
+    "typescript": "^5.7.2"
   }
 }
